# link-all-the-languages

./: .gitignore  Cargo.toml  Hello.java  Makefile  README.md  build.py  build.yml  run.sh
include/: challenge.h  functions.h
src/: functions.h  hello.c  hello.cpp  hello.d  hello.f90  hello.go  hello.nim  hello.rs  lib.c  lib.carp  lib.cpp  lib.cr  lib.d  lib.f  lib.nim  lib.rs  lib.swift  lib.zig  main.c
src/assembly/: arm-linux-gnueabihf.s  x86_64-pc-linux-gnu.s
src/java/: Hello.java  wrapper.c
src/kotlin/: hello.kt  wrapper.c
src/lua/: hello.lua  wrapper.c
src/python/: hello.py  wrapper.c
src/rexx/: hello.rex  wrapper.c
src/ruby/: hello.rb  wrapper.c
src/runtime/: jvm.c
src/rust/: Cargo.toml
src/rust-hello/: Cargo.toml
src/rust-hello/src/: lib.rs
src/rust/src/: lib.rs
src/tcl/: hello.tcl  wrapper.c
src/zig/: build.zig
src/zig/src/: main.zig
