[package]
name = "link-all-languages"
version = "0.1.0"
authors = ["GrayJack <gr41.j4ck@gmail.com>", "Alexander Hill <CodeBreadpudding@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.10"

[lib]
name = "hello_rust"
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
