[package]
name = "rust-hello"
version = "0.1.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
libc = { version = "0.2", default-features = false, features = [] }